#ifndef ADMIN_H
#define ADMIN_H

#include <mutex>
#include <map>
#include <string>
#include <vector>
#include <memory>
#include "gameLoop.h"
#include "../common/communication/protocol.h"

class ClientHandler;
class Lobby;
class GameLoop;

class Admin {
public:
    Admin();
 
    void stop();

    void createLobby(const std::string& name);
    void joinLobby(const std::string& name, const std::string& clientName, Protocol&& protocol);
    std::vector<std::string> listLobbies();
    void removeLobby(const std::string& name);

    void registerHandler(const std::string& clientName, std::shared_ptr<ClientHandler> handler);
    void startHandler(std::shared_ptr<ClientHandler> handler);
    void removeHandler(const std::string& clientName);

    void startGame(const std::string& name, std::map<std::string, Protocol>&& players);
    void endGame(const std::string& name, std::map<std::string, Protocol>&& players);
private:
    std::mutex mtx;
    std::map<std::string, std::shared_ptr<Lobby>> lobbies;
    std::map<std::string, std::shared_ptr<GameLoop>> games;
    std::map<std::string, std::shared_ptr<ClientHandler>> handlers;
};

#endif
